fix: :bug: stop flickering on chrome

--- a/public/resources/scss/index.scss
+++ b/public/resources/scss/index.scss
@@ -3091,6 +3091,7 @@ main.grid {
             font-size: 16px;
             transform: scale(1);
             transition: transform 0.15s ease-in-out, background-color 0.15s;
+            will-change: transform;
 
             &:hover,
             &:focus {
